# Dirac-Inspector

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  mdcint.c  mdcint.h  mdprop.c  mdprop.h  mrconee.c  mrconee.h
